--- a/src/Frontend/CleanArchitecture.Client/appsettings.json
+++ b/src/Frontend/CleanArchitecture.Client/appsettings.json
@@ -1,12 +1,13 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CleanArchitecture.Client-c06825bd-b9f6-427b-b0f3-47db2d8e048b;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CleanArchitectureEventHandlerDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  }
 }
