--- a/src/Backend/CleanArchitecture.Application/CleanArchitecture.Application.csproj
+++ b/src/Backend/CleanArchitecture.Application/CleanArchitecture.Application.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <Folder Include="DTOs\" />
-    <Folder Include="Interfaces\" />
+    <Folder Include="Interfaces\RepositoryInterfaces\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
