--- a/src/Frontend/CleanArchitecture.Client/CleanArchitecture.Client.csproj
+++ b/src/Frontend/CleanArchitecture.Client/CleanArchitecture.Client.csproj
@@ -22,4 +22,6 @@
     <ProjectReference Include="..\..\Backend\CleanArchitecture.Presentation\CleanArchitecture.Presentation.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
